--- a/unfinished/alnes-3/chapter.tex
+++ b/unfinished/alnes-3/chapter.tex
@@ -1,4 +1,4 @@
-\fenicschapter{SyFi -- Symbolic Finite Elements -- and its Form Compiler SFC  }
+\fenicschapter{SyFi -- Symbolic Finite Elements and its Form Compiler SFC  }
               {SyFi and SFC}
               {Martin Sandve Aln\ae s and Kent-Andre Mardal}
               {alnes-3}
@@ -11,23 +11,28 @@
 
 This chapter concerns the finite element library SyFi and its form compiler SFC. 
 SyFi is a framework for defining finite elements symbolically, using the 
-C++ library GiNaC~\cite{BauerFrinkKreckel2000} and its Python interface Swiginac~\cite{www:swiginac}. In many respects, SyFi is 
-the equivalent of \fiat~\cite{Kirby2006}, whereas SFC corresponds to \ffc~\cite{KirbyLogg2008b,Logg2007d}. SyFi and SFC comes with
-an extensive manual \cite{AlnaesMardal2009a} and can be found on the \fenics\ webpage \cite{AlnaesMardal2009}. 
-SFC can be used in \fenics\ as a form compiler. Similar to \ffc\ it translates \ufl\ code
-into UFC code~\cite{logg-4,AlnaesLangtangenEtAl2007, AlnaesLoggEtAl2009}, which can be used by the \dolfin\ assembler described in Chapter~\cite{logg-3}. 
+C++ library GiNaC~\citep{BauerFrinkKreckel2000} and its Python interface
+Swiginac~\citep{SkavhaugCertik2009}.  
+In many respects, SyFi is the equivalent of \fiat~\citep{Kirby2006}, whereas SFC corresponds to \ffc,
+    see Chapter\ref{chap:logg-1} and ~\citep{KirbyLogg2008,Logg2007d}. SyFi and SFC comes with
+an extensive manual \citep{AlnaesMardal2009a} and can be found on the \fenics\ webpage. 
+SFC can be used in \fenics\ as a form compiler. Similar to \ffc\ it
+translates \ufl\ code, see Chapter~\ref{chap:alnes-1}, 
+into UFC code~\ref{chap:alnes-2},\citep{AlnaesLangtangenEtAl2007,AlnaesLoggMardalEtAl2009},
+     which can be used by the \dolfin\ assembler described in
+     Chapter~\ref{chap:logg-3}. 
 
 This chapter is deliberately short and only gives the reader a taste of the capabilities of SyFi and SFC. 
 However, most features are covered by the more comprehensive manual. 
 This chapter is organized as follows: We begin with a short description of GiNaC 
 and Swiginac, before we present how finite elements are used and defined by using SyFi.   
 Then, we present how to use SFC in the Dolfin environment, and end with a short description of the basic structure of SFC. 
-The code examples accompanying this chapter can be found in  
-\emp{\$FENICSBOOK/src/syfi-sfc}.
+%The code examples accompanying this chapter can be found in  
+%\emp{\$FENICSBOOK/src/syfi-sfc}.
 
 \section{GiNaC and Swiginac}
 
-GiNaC~\cite{BauerFrinkKreckel2000} is an open source C++ library for symbolic calculations. 
+GiNaC~\citep{BauerFrinkKreckel2000} is an open source C++ library for symbolic calculations. 
 It contains the tools for doing basic manipulations of polynomials, like algebraic operations, 
 differentiation, and integration. 
 The following example shows basic use of the library,  
@@ -183,7 +188,8 @@ class CrouzeixRaviart:
   def nbf(self): return len(self.Ns)
 \end{python}
 The process of defining a finite element in SyFi is similar for all elements and,
-as the above code shows,  it resembles the Ciarlet definition closely, see also Chapter \cite{kirby-1}. 
+as the above code shows,  it resembles the Ciarlet definition closely, see
+also the Chapters~\ref{chap:kirby-1} and \ref{chap:kirby-6}. 
 First, we construct a polynomial space. In the code above, this is performed by calling the \emp{bernstein}
 function. The \emp{bernstein} functions takes as input a simplex and the order of the bernstein polynomial, 
 which can be of arbitrary order. This function produces a tuple consisting of 
@@ -270,8 +276,9 @@ sfc_options.code.integral.integration_method = "symbolic" # default is "quadratu
 A = assemble(a, form_compiler_parameters=sfc_options)
 \end{python}
 
-Earlier versions of SFC was slow for complicated nonlinear equations as shown in \cite{AlnaesMardal2009b}.
-However, with the introduction of UFL \cite{AlnaesThesis, AlnaesA.Logg2009}, quite complicated 
+Earlier versions of SFC was slow for complicated nonlinear equations as
+shown in \citep{AlnaesMardal2009b}.
+However, with the introduction of UFL \citep{AlnaesThesis, AlnaesA.Logg2009}, quite complicated 
 equations can be handled without loosing computational efficiency. Consider for example an elasticity problem 
 where the constitutive law is a quite complicated variant of Fung, described by 
 the following equations: 
@@ -350,7 +357,7 @@ the two elasticity problems on a $N\times N$ unit square mesh for linear ($p=1$)
 \end{center}
 \end{table}
 
-We refer to \cite{AlnaesMardal2009b,OlgaardLoggEtAl2008,KirbyLogg2008b,oelgaard:2010}   
+We refer to \citep{AlnaesMardal2009b,OlgaardLoggEtAl2008,KirbyLogg2008b,oelgaard:2010}   
 for more discussions on the topic of efficient compiling of linear and nonlinear variational formulations. 
 
 
