added a Fung reference

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2761,6 +2761,15 @@
   url = {http://circres.ahajournals.org/cgi/content/abstract/22/2/165}
 }
 
+@BOOK{Fung1993,
+  title = {Biomechanics: Mechanical Properties of Living Tissues},
+  publisher = {Springer-Verlag},
+  year = {1993},
+  author = {Y. C. Fung}
+}
+
+
+
 @BOOK{Fung1984,
   title = {Biodynamics: Circulation},
   publisher = {Springer-Verlag},
