--- a/unfinished/alnes-3/chapter.tex
+++ b/unfinished/alnes-3/chapter.tex
@@ -13,20 +13,21 @@ This chapter concerns the finite element library SyFi and its form compiler SFC.
 SyFi is a framework for defining finite elements symbolically, using the 
 C++ library GiNaC~\citep{BauerFrinkKreckel2000} and its Python interface
 Swiginac~\citep{SkavhaugCertik2009}.  
-In many respects, SyFi is the equivalent of \fiat~\citep{Kirby2006}, whereas SFC corresponds to \ffc,
-    see Chapter\ref{chap:logg-1} and ~\citep{KirbyLogg2008,Logg2007d}. SyFi and SFC comes with
+In many respects, SyFi is the equivalent of \fiat,
+   Chapter~\ref{chap:kirby-2}, whereas SFC corresponds to \ffc,
+    see Chapter\ref{chap:logg-1}. SyFi and SFC comes with
 an extensive manual \citep{AlnaesMardal2009a} and can be found on the \fenics\ webpage. 
 SFC can be used in \fenics\ as a form compiler. Similar to \ffc\ it
-translates \ufl\ code, see Chapter~\ref{chap:alnes-1}, 
-into UFC code~\ref{chap:alnes-2},\citep{AlnaesLangtangenEtAl2007,AlnaesLoggMardalEtAl2009},
-     which can be used by the \dolfin\ assembler described in
-     Chapter~\ref{chap:logg-3}. 
+translates \ufl\ code (see Chapter~\ref{chap:alnes-1}) 
+into UFC code (see Chapter~\ref{chap:alnes-2}), 
+which can be used by the \dolfin\ assembler described in
+Chapter~\ref{chap:logg-3}. 
 
 This chapter is deliberately short and only gives the reader a taste of the capabilities of SyFi and SFC. 
 However, most features are covered by the more comprehensive manual. 
 This chapter is organized as follows: We begin with a short description of GiNaC 
-and Swiginac, before we present how finite elements are used and defined by using SyFi.   
-Then, we present how to use SFC in the Dolfin environment, and end with a short description of the basic structure of SFC. 
+and Swiginac, before we present how finite elements are used and defined using SyFi.   
+Then, we present how to use SFC in the \dolfin\ environment, and end with a short description of the basic structure of SFC. 
 %The code examples accompanying this chapter can be found in  
 %\emp{\$FENICSBOOK/src/syfi-sfc}.
 
@@ -35,7 +36,7 @@ Then, we present how to use SFC in the Dolfin environment, and end with a short 
 GiNaC~\citep{BauerFrinkKreckel2000} is an open source C++ library for symbolic calculations. 
 It contains the tools for doing basic manipulations of polynomials, like algebraic operations, 
 differentiation, and integration. 
-The following example shows basic use of the library,  
+The following example shows basic usage of the library,  
 \begin{c++}
   // create a polynomial function
   symbol x("x");
@@ -60,16 +61,16 @@ contains many different types like \emp{symbol}, \emp{matrix}, \emp{function}, e
 Normally, one does not need to worry about these types since the type \emp{ex}, which
 was used above, can represent any mathematical object (\emp{ex} is basically a place-holder for the underlying 
 object). Still, there are mathematical operations that can only be applied on particular 
-types. For instance, functions can only differentiated with respect to
+types. For instance, functions can only be  differentiated with respect to
 symbols, as shown above.  Notice also that GiNaC overloads operators
 like \emp{==} to enable creation of equations and inequalities, which
 may be represented as  expressions of type \emp{relations} (or \emp{ex}). 
 
 Symbolic calculations can be computationally demanding. Therefore, GiNaC separates between 
 the construction and evaluation of expressions. This is illustrated in the above example by
-the fact that we create and integral object using the function \emp{integral}, but we 
+the fact that we create an integral object using the function \emp{integral}, but we 
 need to explicitly call the function \emp{eval\_integ} to compute the integral. In a similar
-fashion you may use functions like \emp{eval}, \emp{evalm}, \emp{expand}, \emp{simplify}, 
+fashion one may use functions like \emp{eval}, \emp{evalm}, \emp{expand}, \emp{simplify}, 
 and  \emp{collect\_common\_factors}  etc. to evaluate and simplify expressions. 
 Finally, GiNaC implements its own memory management system using reference counting.   
 The complete code can be found at \emp{syfi-sfc/ginac}.
@@ -106,14 +107,15 @@ Some elements that have been implemented include:
 continuous and discontinuous Lagrangian elements, 
 the Crouzeix-Raviart element, the Raviart-Thomas element, various H(div) and H(curl) Nedelec 
 elements, and the Hermite elements, see Chapter~\ref{chap:kirby-6} for
-a description of these elements. A complete list of elements can be found
+a description of the above mentioned elements. 
+A complete list of elements can be found
 in the user manual. The mentioned elements are defined for arbitrary order, except for
 the Crouzeix-Raviart and Hermite elements. Not all of these elements are, however, 
 supported by the form compiler. 
 
 The following example illustrates how to use SyFi to do finite element calculations in Python. 
 Here, we create a Langrange element of second order and use the basis functions to compute a 
-stiffness element matrix on a reference triangle. We also print both the integrand and 
+element stiffness matrix on a reference triangle. We also print both the integrand and 
 the element matrix entries to the screen. 
 \begin{python}
 from swiginac import *
@@ -280,9 +282,13 @@ sfc_options.code.integral.integration_method = "symbolic" # default is "quadratu
 A = assemble(a, form_compiler_parameters=sfc_options)
 \end{python}
 
-Earlier versions of SFC were slow for complicated nonlinear equations as
-shown in \citep{AlnaesMardal2009b}.
-However, with the introduction of UFL \citep{AlnaesThesis, AlnaesA.Logg2009}, quite complicated 
+Earlier versions of SFC were produced slow code for complicated nonlinear
+equations as shown in \citep{AlnaesMardal2009b}. Furthermore, 
+the code generation was expensive both in terms of memory and the number
+of operations required in the computations. 
+However, a significant speed-up came with the introduction of UFL 
+with its expression three traversal algorithms.  
+Now, quite complicated 
 equations can be handled without losing computational efficiency. Consider for example an elasticity problem 
 where the constitutive law is a quite complicated variant of
 Fung~\citep{Fung1993}, described by 
@@ -299,7 +305,7 @@ the following equations:
 Here, $\mathbf{u}$ is the unknown displacement, $\mathbf{v}$ is a test function, $\mathbf{I}$ is the identity matrix, $\mathbf{A}$ 
 is a matrix, $\lambda$ and $K$  are  material parameters, $\LL$ is the system of nonlinear equations to be solved, and 
 $\JJ_F$ is the corresponding Jacobian. 
-This variational form is implemented as follows: 
+This variational form is implemented in PyDolfin as follows: 
 \begin{python}
   mesh = UnitSquare(N, N)
   V = VectorFunctionSpace(mesh, "CG", order)
@@ -362,8 +368,9 @@ the two elasticity problems on a $N\times N$ unit square mesh for linear ($p=1$)
 \end{center}
 \end{table}
 
-We refer to \citep{AlnaesMardal2009b,OlgaardLoggEtAl2008,KirbyLogg2008b,oelgaard:2010}   
-for more discussions on the topic of efficient compiling of linear and nonlinear variational formulations. 
+We refer to
+\citep{AlnaesMardal2009b,OelgaardLoggWells2008,KirbyLogg2008,OelgaardWells2010}   
+for more discussions on the topic of efficient compilation of linear and nonlinear variational formulations. 
 
 
 
@@ -467,12 +474,12 @@ for the code generation. The details of this is, however, beyond the scope of th
 
 
 
-\section{Conclusion}
-
-This chapter presents a short overview of the SyFi and SFC package. It demonstrates the ease of defining 
-elements in a symbolic fashion and shows that also complicated nonlinear PDEs are handled efficiently
-by the form compiler.  
-
-
+%\section{Conclusion}
+%
+%This chapter presents a short overview of the SyFi and SFC package. It demonstrates the ease of defining 
+%elements in a symbolic fashion and shows that also complicated nonlinear PDEs are handled efficiently
+%by the form compiler.  
+%
+%
 
 
