Add some references (used in kirby-7)

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,6 +1,41 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF8
 
+@article{Axelsson1986,
+  title={A general incomplete block-matrix factorization method},
+  author={Axelsson, O.},
+  journal={Linear Algebra and its Applications},
+  volume={74},
+  pages={179--190},
+  issn={0024-3795},
+  year={1986},
+  publisher={Elsevier}
+}
+
+@article{Manteuffel1980,
+  title={An incomplete factorization technique for positive definite linear systems},
+  author={Manteuffel, TA},
+  journal={Mathematics of Computation},
+  volume={34},
+  number={150},
+  pages={473--497},
+  issn={0025-5718},
+  year={1980},
+  publisher={American Mathematical Society}
+}
+
+@article{Saad1994,
+  title={ILUT: A dual threshold incomplete LU factorization},
+  author={Saad, Y.},
+  journal={Numerical linear algebra with applications},
+  volume={1},
+  number={4},
+  pages={387--402},
+  issn={1099-1506},
+  year={1994},
+  publisher={Wiley Online Library}
+}
+
 @book{Gray1897,
   title={Anatomy, descriptive and surgical},
   author={Gray, H.},
