--- a/bibliography.bib
+++ b/bibliography.bib
@@ -8318,8 +8318,8 @@
 }
 
 @UNPUBLISHED{www:hypre,
-  title = {{Hypre} software package},
-  key = {Hypre},
+  title = {software package},
+  author = {Hypre},
   owner = {logg},
   timestamp = {2009.06.06},
   url = {http://www.llnl.gov/CASC/hypre/}
@@ -8373,7 +8373,8 @@
 }
 
 @UNPUBLISHED{www:petsc,
-  title = {{PETSc} software package},
+  title = {software package},
+  author = {PETSc}, 
   key = {{PETSc} software package},
   owner = {logg},
   timestamp = {2009.06.06},
@@ -8405,19 +8406,25 @@
 
 @UNPUBLISHED{www:python-capi,
   title = {{Python C API Reference Manual}},
-  key = {Python C-API},
+  key = {Python C-API}
   url = {http://docs.python.org/c-api}
+}
+
+@UNPUBLISHED{www:distutils, 
+  title = { distutils — {B}uilding and installing {P}ython modules},
+  key   = {Distutils}, 
+  url   = {http://docs.python.org/library/distutils.html}
 }
 
 @UNPUBLISHED{www:python-extending,
   title = {Extending and Embedding the Python Interpreter},
-  key = {extending Python},
+  key = {Extending Python}
   url = {http://docs.python.org/extending}
 }
 
 @UNPUBLISHED{www:trilinos,
-  title = {{Trilinos} software package},
-  key = {{Trilinos}},
+  title = {software package},
+  author = {{Trilinos}},
   owner = {logg},
   timestamp = {2009.06.06},
   url = {http://trilinos.sandia.gov/}
@@ -8436,9 +8443,17 @@
   url = {http://cox.iwr.uni-heidelberg.de/~ug/}
 }
 
+@UNPUBLISHED{www:vmtk,
+  title = {software package},
+  author = {VMTK},
+  url = {http://www.vmtk.org}
+}
+
+
+
 @UNPUBLISHED{www:vtk,
-  title = {{VTK} software package},
-  key = {VTK software package},
+  title = {software package},
+  author = {VTK},
   owner = {logg},
   timestamp = {2009.06.06},
   url = {http://www.kitware.com}
