--- a/unfinished/kirby-8/chapter.tex
+++ b/unfinished/kirby-8/chapter.tex
@@ -23,6 +23,8 @@ tensor~$A_T$ can be computed efficiently by an approach referred to as
 %------------------------------------------------------------------------------
 \section{Tensor representation for Poisson's equation}
 
+\editornote{Need to update notation to use $\hat{T}$ for the reference cell to match introductory chapter [kirby-7].}
+
 We first describe how one may express the cell tensor for Poisson's
 equation as a special tensor contraction and explain below how this
 may be generalized to other variational forms. For Poisson's equation,
