added a few references

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -52,6 +52,30 @@
   timestamp = {2009.06.06}
 }
 
+@MISC{www:valgrind,
+  title = {Software package},
+  author = {Valgrind},
+  url = {http://valgrind.org},
+}
+
+@MISC{www:gdb,
+  title = {Software package},
+  author = {GDB},
+  url = {http://www.gnu.org/software/gdb},
+}
+
+@MISC{www:ddd,
+  title = {Software package},
+  author = {DDD},
+  url = {http://www.gnu.org/software/ddd},
+}
+
+
+
+
+
+
+
 @MISC{www:weave,
   title = {Software package},
   author = {Weave},
