Added title to each code env Added SWIG as code environment Added inputFoo, so one can input code residing in a file

--- a/packages/codehighlight.sty
+++ b/packages/codehighlight.sty
@@ -2,7 +2,7 @@
 \ProvidesPackage{codehighlight}[2009/03/28 code highlighting; provided by Olivier Verdier <olivier@maths.lth.se>]
 
 
-\RequirePackage{listings}
+\RequirePackage{mylistings}
 \RequirePackage{xcolor}
 
 \renewcommand{\lstlistlistingname}{Code Listings}
@@ -24,6 +24,10 @@
 
 %\setbeamercolor{background canvas}{bg=red!10!}
 
+\newcommand{\codetitlestyle}[1]{\small \textit{#1}}
+\newcommand{\belowtitleskip}{2pt}%\smallskipamount}
+\newcommand{\captionposition}{t}
+
 \lstnewenvironment{matlab}[1][]{
 \lstset{
 language=matlab,
@@ -40,7 +44,7 @@ keywordstyle=\color{keywordcolour}\bfseries,
 
 \newcommand{\literatecolour}{\textcolor{literatecolour}}
 
-\lstdefinestyle{mypython}{
+\lstdefinestyle{pythonstyle}{
 %\lstset{
 %keepspaces=true,
 language=python,
@@ -111,14 +115,12 @@ backgroundcolor=\color{yellow!10}
 %}
 }
 
-\newcommand{\inputpython}[3]{\lstinputlisting[firstline=#1,lastline=#2,firstnumber=#1,frame=single,breakindent=.5\textwidth,frame=single,breaklines=true,style=mypython]{#3}}
+\newcommand{\inputpython}[1]{\lstinputlisting[style=pythonstyle, title={\codetitlestyle{Python code}}, belowcaptionskip=\belowtitleskip]{#1}}
 
-\lstnewenvironment{python}[1][]{\lstset{style=mypython}}{}
-\newcommand{\pyth}{\lstinline[style=mypython,basicstyle=\ttfamily]}
+\lstnewenvironment{python}[1][]{\lstset{style=pythonstyle, title={\codetitlestyle{Python code}}, belowcaptionskip=\belowtitleskip}}{}
+\newcommand{\pyth}{\lstinline[style=pythonstyle, basicstyle=\ttfamily]}
 
-\def\command{\pyth}
-
-\lstdefinestyle{mycpp}{
+\lstdefinestyle{cppstyle}{
 %\lstset{
 %keepspaces=true,
 language=c++,
@@ -195,13 +197,11 @@ backgroundcolor=\color{yellow!10}
 %}
 }
 
-\newcommand{\inputcpp}[1]{\lstinputlisting[style=mycpp]{#1}}
+\newcommand{\inputcpp}[1]{\lstinputlisting[style=cppstyle, title={\codetitlestyle{C++ code}}, belowcaptionskip=\belowtitleskip]{#1}}
 
-\lstnewenvironment{c++}[1][]{\lstset{style=mycpp}}{}
+\lstnewenvironment{c++}[1][]{\lstset{style=cppstyle, title={\codetitlestyle{C++ code}}, belowcaptionskip=\belowtitleskip}}{}
 
-%\newcommand{\c++}{\lstinline[style=mycpp,basicstyle=\ttfamily]}
-
-\lstdefinestyle{mybash}{
+\lstdefinestyle{bashstyle}{
 %\lstset{
 %keepspaces=true,
 language=bash,
@@ -226,9 +226,11 @@ rulecolor=\color{black!40},
 backgroundcolor=\color{yellow!10}
 }
 
-\lstnewenvironment{bash}[1][]{\lstset{style=mybash}}{}
+\newcommand{\inputbash}[1]{\lstinputlisting[style=bashstyle, title={\codetitlestyle{Bash code}}, belowcaptionskip=\belowtitleskip]{#1}}
 
-\lstdefinestyle{mygencode}{
+\lstnewenvironment{bash}[1][]{\lstset{style=bashstyle, title={\codetitlestyle{Bash code}}, belowcaptionskip=\belowtitleskip}}{}
+
+\lstdefinestyle{gencodestyle}{
 %\lstset{
 %keepspaces=true,
 language=bash,
@@ -252,5 +254,11 @@ rulecolor=\color{black!40},
 backgroundcolor=\color{yellow!10}
 }
 
-\lstnewenvironment{gencode}[1][]{\lstset{style=mygencode}}{}
+\newcommand{\inputgencode}[1]{\lstinputlisting[style=cppstyle, title={\codetitlestyle{Generated code}}, belowcaptionskip=\belowtitleskip]{#1}}
+
+\lstnewenvironment{gencode}[1][]{\lstset{style=gencodestyle, title={\codetitlestyle{Generated code}}, belowcaptionskip=\belowtitleskip}}{}
+
+\newcommand{\inputswig}[1]{\lstinputlisting[style=cppstyle, title={\codetitlestyle{SWIG code}}, belowcaptionskip=\belowtitleskip]{#1}}
+
+\lstnewenvironment{swigcode}[1][]{\lstset{style=cppstyle, title={\codetitlestyle{SWIG code}}, belowcaptionskip=\belowtitleskip}}{}
 
